k8s/base/bmiapps-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bmiapps-proxy
spec:
  externalName: $(BMIAPPS_STORAGE_URL)
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  sessionAffinity: None
  type: ExternalName
