k8s/base/webapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: authentication
  name: oidc-dashboard-webapi-v1
  labels:
    HealthChecks: "true"
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/name: oidc-dashboard-webapi
    app.kubernetes.io/version: v1
