k8s/base/webapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: authentication
  name: oidc-dashboard
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/upstream-vhost: $(BMIAPPS_STORAGE_URL)
spec:
  rules:
  - host: '*.$(BASE_HOSTNAME)'
    http:
      paths:
      - path: /app/oidc-dashboard/v1(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
              name: bmiapps-proxy
              port:
                number: 443                
  tls:
  - hosts:
    - '*.brandmuscle.net'
    secretName: brandbuilder-tls
